# kex

./: CMakeLists.txt  Crop.lua  Diag.lua  DivisiveNormalization.lua  README  SpatialFullConvolution.lua  SpatialFullConvolutionMap.lua  SpatialMaxPooling2.lua  SpatialMaxPyramid.lua  SqrtBias.lua  TensorLinear.lua  Vectorize.lua  WeightedMSECriterion.lua  cudahacks.lua  flatten.lua  hessian.lua  init.c  init.lua  lushio.lua  stochasticrates.lua  tt2.lua
dok/: index.dok  lushio.dok  nn.dok
generic/: L1Cost.c  SpatialFullConvolution.c  SpatialFullConvolutionMap.c  SpatialMaxPooling2.c  SqrtBias.c  util.c
test/: test_module.lua
